--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Expecting Health</title>
+    <title>A personalized AI-powered pregnancy assistant, right in your pocket.</title>
     <link rel="stylesheet" href="style.css">
+
+    <!-- Favicon -->
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://expecting.health/">
+    <meta property="og:title" content="Expecting Health - With You on Your Pregnancy Journey">
+    <meta property="og:description" content="A personalized assistant guiding you through each step of your pregnancy journey with tailored advice, prompts, and product recommendations.">
+    <meta property="og:image" content="https://expecting.health/img/pregnant-woman-outline-small-square.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://expecting.health/">
+    <meta property="twitter:title" content="Expecting Health - With You on Your Pregnancy Journey">
+    <meta property="twitter:description" content="A personalized assistant guiding you through each step of your pregnancy journey with tailored advice, prompts, and product recommendations.">
+    <meta property="twitter:image" content="https://expecting.health/img/pregnant-woman-outline-small-square.png">
+
     <style>
         * {
             margin: 0;
