--- a/index.html
+++ b/index.html
@@ -192,68 +192,9 @@
         <div class="text-side">
             <h1>Starting a family doesn’t have to be scary</h1>
             <p>From the first signs to early parenthood, our intelligent assistant guides you through each milestone with tailored advice, personalized prompts, and recommendations for you and your baby. Feel empowered, informed, and in control—wherever your journey takes you.</p>
-            <button id="waitlist-btn">Join the Waitlist</button>
+            <button id="waitlist-btn" onclick="window.open('https://forms.gle/eCEacYqjAjuCiXwt6','_blank')">Join the Beta</button>
         </div>
     </div>
-
-    <!-- Modal -->
-    <div id="waitlist-modal" class="modal">
-        <div class="modal-content">
-            <form id="waitlist-form" action="https://script.google.com/macros/s/AKfycbyxIGnnvZSlBpddmqVjOit9t8dE4WvvoaNwkpXpqjgOcJd5QpQe3AB4RmibHcC7RNWd-A/exec" method="POST">
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" placeholder="Your email" required>
-
-                <label for="reason">Why are you interested?</label>
-                <select id="reason" name="reason" required>
-                    <option value="" disabled selected>Select an option</option>
-                    <option value="First-time parent">First-time parent</option>
-                    <option value="Currently Expecting">Currently Expecting</option>
-                    <option value="Learning more about pregnancy">Learning more about pregnancy</option>
-                    <option value="Other">Other</option>
-                </select>
-
-                <button type="submit">Submit</button>
-            </form>
-        </div>
-    </div>
-
-    <!-- Success message -->
-    <div id="success-message" class="success-message">
-        Thank you for joining the waitlist! We will be in touch soon.
-    </div>
-
-    <script>
-        // Open modal when button is clicked
-        document.getElementById('waitlist-btn').addEventListener('click', function() {
-            document.getElementById('waitlist-modal').style.display = 'flex';
-        });
-
-        // Handle form submission using AJAX
-        document.getElementById('waitlist-form').addEventListener('submit', function(event) {
-            event.preventDefault(); // Prevent default form submission
-
-            // Prepare form data
-            var formData = new FormData(this);
-
-            // Send form data via fetch API
-            fetch(this.action, {
-                method: 'POST',
-                body: formData,
-            })
-            .then(response => {
-                if (response.ok) {
-                    // Hide modal and show success message
-                    document.getElementById('waitlist-modal').style.display = 'none';
-                    document.getElementById('success-message').style.display = 'block';
-                } else {
-                    console.error('Form submission failed.');
-                }
-            })
-            .catch(error => {
-                console.error('Error:', error);
-            });
-        });
-    </script>
 </body>
 </html>
 
