--- a/index.html
+++ b/index.html
@@ -121,6 +121,15 @@
         }
     </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MX6WB79QPP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MX6WB79QPP');
+</script>
 <body>
     <!-- Main Container -->
     <div class="container">
